// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="FieldGroup"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="agree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="agree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you really agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="reallyAgree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="reallyAgree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component children in a row 1`] = `
<div
  class="FieldGroup my-extra-class FieldGroup--row"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="agree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="agree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you really agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="reallyAgree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="reallyAgree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="FieldGroup my-extra-class"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="agree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="agree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you really agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="reallyAgree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="reallyAgree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M20.7071 5.29289C21.0976 5.68342 21.0976 6.31658 20.7071 6.70711L9.70711 17.7071C9.51957 17.8946 9.26522 18 9 18C8.73478 18 8.48043 17.8946 8.29289 17.7071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929C3.68342 10.9024 4.31658 10.9024 4.70711 11.2929L9 15.5858L19.2929 5.29289C19.6834 4.90237 20.3166 4.90237 20.7071 5.29289Z"
            />
          </svg>
        </label>
      </div>
      <div>
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;
